@@ -1,4 +1,6 @@
 SVN Version
+	* Added warning messages to the qrs::AbsService::autoconnect() in
+	order to simplify debugging.
 
 2010-07-03 Version 1.1.0
 	* Fixed some threadsafty issues in the ServicesManager class.
